--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,7 +33,7 @@ jobs:
           versionTemplate: 1.1
           versionFormat: template
           # Optional, add +X to version number. Default: 1 
-          incrementBy: X
+          # incrementBy: X
         env:
           snowUsername: ${{ secrets.SN_USERNAME }}
           snowPassword: ${{ secrets.SN_PASSWORD }}
