--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
         uses: ServiceNow/sncicd-publish-app@1.0.0
         with:
           versionTemplate: 1.1
-          versionFormat: template
+          versionFormat: detect
           # Optional, add +X to version number. Default: 1 
           # incrementBy: X
         env:
