--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,22 +31,19 @@ jobs:
         uses: ServiceNow/sncicd-publish-app@1.0.0
         with:
           versionTemplate: 1.1
-          versionFormat: detect
-          # Optional, add +X to version number. Default: 1 
-          # incrementBy: X
+          versionFormat: template
         env:
           snowUsername: ${{ secrets.SN_USERNAME }}
           snowPassword: ${{ secrets.SN_PASSWORD }}
           snowSourceInstance: ${{ secrets.SN_DEV_INSTANCE }}
           appSysID: ${{ secrets.SN_APP_SYSID }}
-       
           
     # This is required to pass the version number output from Publish App 
     # to the input for Install App in the next job! This is because the jobs 
     # run on different Linux instances, so without this Install App won't know
     # what to install.
     outputs:
-      publishversion: ${{ steps.publish_app.outputs.publishversion }}
+      publishversion: ${{ steps.publish_app.outputs.newVersion }}
 
   test:
     # Purpose of this job is to Install App from the app repo for the version 
@@ -66,13 +63,6 @@ jobs:
         uses: ServiceNow/sncicd-install-app@1.0.0
         with:
           version: ${{ needs.build.outputs.publishversion }}
-          # Only applicable if Application Customization is active. 
-          # Version of the base application on which to apply the customizations
-          baseAppVersion: '1.2.3'
-          # Only applicable if Application Customization is active and the associated 
-          # application is a higher version than the currently installed version
-          # Default: false
-          autoUpgradeBaseApp: true
         env:
           snowUsername: ${{ secrets.SN_USERNAME }}
           snowPassword: ${{ secrets.SN_PASSWORD }}
@@ -84,9 +74,9 @@ jobs:
         with:
           testSuiteSysId: ${{ secrets.SN_ATFTESTSUITE_SYSID }}
         env:
-          nowUsername: ${{ secrets.SN_USERNAME }}
-          nowPassword: ${{ secrets.SN_PASSWORD }}
-          nowInstallInstance: ${{ secrets.SN_TEST_INSTANCE }}
+          snowUsername: ${{ secrets.SN_USERNAME }}
+          snowPassword: ${{ secrets.SN_PASSWORD }}
+          snowInstallInstance: ${{ secrets.SN_TEST_INSTANCE }}
 
       - name: ServiceNow CI/CD Rollback App
         if: ${{ failure() && steps.install_app.outputs.rollbackVersion }}
@@ -122,13 +112,6 @@ jobs:
         uses: ServiceNow/sncicd-install-app@1.0.0
         with:
           version: ${{ needs.test.outputs.publishversion }}
-          # Only applicable if Application Customization is active. 
-          # Version of the base application on which to apply the customizations
-          baseAppVersion: '1.2.3'
-          # Only applicable if Application Customization is active and the associated 
-          # application is a higher version than the currently installed version
-          # Default: false
-          autoUpgradeBaseApp: true
         env:
           snowUsername: ${{ secrets.SN_USERNAME }}
           snowPassword: ${{ secrets.SN_PASSWORD }}
